INTERNAL-456: hide slider buttons on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/html/slider.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/html/slider.phtml
@@ -71,7 +71,7 @@ $viewAllUrl = $block->getData('view_all_url') ?? '';
                     <?php endif; ?>
                 </div>
             </div>
-            <a href="<?= $escaper->escapeUrl($viewAllUrl) ?>" class="hidden md:[.slider--pagebuilder_&]:block button button--ghost-primary h-auto text-[14px]" x-element-transition-trigger>
+            <a href="<?= $escaper->escapeUrl($viewAllUrl) ?>" class="hidden max-md:[.slider--pagebuilder_&]:block button button--ghost-primary h-auto text-[14px]" x-element-transition-trigger>
                 View all
                 <span class="button__icon ml-2">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24" role="img">
