INTERNAL-456: Customize video hero content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/master.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/master.html
@@ -12,6 +12,30 @@
             ></iframe>
         </div>
 
+        <p
+            attr="data.banner_height.attributes"
+            ko-style="data.banner_height.style"
+            css="data.banner_height.css"
+            html="data.banner_height.html"
+            hidden
+        ></p>
+
+        <p
+            attr="data.desktop_content_position.attributes"
+            ko-style="data.desktop_content_position.style"
+            css="data.desktop_content_position.css"
+            html="data.desktop_content_position.html"
+            hidden
+        ></p>
+
+        <p
+            attr="data.mobile_content_alignment.attributes"
+            ko-style="data.mobile_content_alignment.style"
+            css="data.mobile_content_alignment.css"
+            html="data.mobile_content_alignment.html"
+            hidden
+        ></p>
+
         <h2
             attr="data.heading.attributes"
             ko-style="data.heading.style"
