--- a/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
@@ -28,20 +28,15 @@ $isPopup = $block->getData('is_popup') ?? false;
 <template x-if="optionIsEnabled(<?= (int)$attributeId ?>, item.id)">
     <label
         :for="`attribute-option-<?= (int)$productId ?>-${item.id}-<?= $isPopup ? 'mobile' : 'desktop' ?>`"
-        @click.stop="optionIsActive(<?= (int)$attributeId ?>, item.id) && changeOption(<?= (int)$attributeId ?>, item.id)"
-        class="button button--size-sm select-none transition-all ease-in-out relative bg-bg-500"
+        class="button button--size-sm select-none transition-all ease-in-out relative bg-bg-500 has-[input:focus]:focus-ring"
         :class="{
             'button--outline-primary button--disabled': !optionIsActive(<?= (int)$attributeId ?>, item.id),
             'button--outline-primary border-2': selectedValues[<?= (int)$attributeId ?>] === item.id,
             'button--outline-secondary': selectedValues[<?= (int)$attributeId ?>] !== item.id,
         }"
-        role="radio"
         aria-label="getSwatchText(<?= (int)$attributeId ?>, item.id)"
-        :tabindex="selectedValues[<?= (int)$attributeId ?>] ? (selectedValues[<?= (int)$attributeId ?>] === item.id ? '0' : '-1') : (index === 0) - 1"
         :aria-checked="selectedValues[<?= (int)$attributeId ?>] ? (selectedValues[<?= (int)$attributeId ?>] === item.id ? 'true' : 'false') : (index === 0)"
-        x-a11y-radio
         :style="getSwatchBackgroundStyle(<?= (int)$attributeId ?>, item.id)"
-        :disabled="selectedValues[<?= (int)$attributeId ?>] === item.id || !optionIsActive(<?= (int)$attributeId ?>, item.id)"
         <?php if ($configurableViewModel->getShowSwatchTooltip()): ?>
             @mouseenter.self="activeTooltipItem = {
                 attribute: '<?= (int)$attributeId ?>',
@@ -60,12 +55,15 @@ $isPopup = $block->getData('is_popup') ?? false;
             :value="item.id"
             name="super_attribute[<?= (int)$attributeId ?>]"
             class="-z-10 absolute opacity-0"
-            tabindex="-1"
             type="radio"
             :required="getAllowedAttributeOptions(<?= (int)$attributeId ?>).filter(attributeOption => selectedValues[attributeOption]).length === 0"
             :aria-label="getSwatchText(<?= (int)$attributeId ?>, item.id)"
             aria-describedby="attribute-label-<?= $escaper->escapeHtmlAttr($productId . '-' . $attributeId) ?>"
             form="<?= $escaper->escapeHtmlAttr($formId) ?>"
+            @change="optionIsActive(<?= (int)$attributeId ?>, item.id) && changeOption(<?= (int)$attributeId ?>, item.id)"
+            role="radio"
+            :tabindex="selectedValues[<?= (int)$attributeId ?>] ? (selectedValues[<?= (int)$attributeId ?>] === item.id ? '0' : '-1') : (index === 0) - 1"
+            x-a11y-radio
             :disabled="!optionIsActive(<?= (int)$attributeId ?>, item.id)"
         >
         <template x-if="isTextSwatch(<?= (int)$attributeId ?>, item.id)">
