Style quick buy button in admin

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_product-card.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_product-card.style.less
@@ -203,6 +203,20 @@
   color: #0b0b0b;
 }
 
+.card-product form {
+  position: absolute;
+  right: 0;
+}
+
+.card-product form button {
+  color: #181818;
+  font-size: 24px;
+  line-height: 32px;
+  border: none;
+  background: none;
+  padding: 0;
+}
+
 @media (min-width: 768px) {
   .card-product:hover > a::before,
   .card-category:hover::before {
