Fix popup issue on mobile on navigation

--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/404.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/404.phtml
@@ -12,7 +12,7 @@ $title = $block->getChildBlock('page.main.title')? $block->getChildBlock('page.m
 $content = $block->getChildHtml('cms_page') ?? $block->getChildHtml('cms_noroute');
 ?>
 
-<div class="flex h-full flex-col items-center justify-center gap-5">
+<div class="content-wrapper flex h-full flex-col items-center justify-center gap-5">
     <p class="text-[80px] leading-none">
         <?= $title ?>
     </p>
