--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -30,31 +30,34 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <div x-intersect:enter="$store.main.isHeaderShadowVisible = false"
      x-intersect:leave="$store.main.isHeaderShadowVisible = true"></div>
 
-<header x-data="{
-            isMenuVisible: false,
-            isCartVisible: false,
-            isWishlistVisible: false
-        }"
-        x-init="
-            $watch('$store.popup.currentPopup', (value) => {
-                isMenuVisible = value === 'menu';
-                isCartVisible = value === 'cart';
-                isWishlistVisible = value === 'wishlist';
-            })
-        "
-        class="header sticky left-0 right-0 top-0 z-[36] flex flex-col justify-items-stretch p-3 md:pointer-events-none"
-        :style="`opacity: ${$store.main.opacityOnZoom}`"
+<header
+    x-data="{
+        isMenuVisible: false,
+        isCartVisible: false,
+        isWishlistVisible: false
+    }"
+    x-init="
+        $watch('$store.popup.currentPopup', (value) => {
+            isMenuVisible = value === 'menu';
+            isCartVisible = value === 'cart';
+            isWishlistVisible = value === 'wishlist';
+        })
+    "
+    class="header sticky left-0 right-0 top-0 z-[36] flex flex-col justify-items-stretch p-3 md:pointer-events-none"
+    :style="`opacity: ${$store.main.opacityOnZoom}`"
 >
-    <div id="header-shadow"
-         class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-all duration-300 ease-linear will-change-transform md:hidden"
-         :class="{
+    <div
+        id="header-shadow"
+        class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-all duration-300 ease-linear will-change-transform md:hidden"
+        :class="{
             'translate-y-0': $store.main.isHeaderShadowVisible,
             '-translate-y-full': !$store.main.isHeaderShadowVisible
         }"
     ></div>
 
-    <div class="content-wrapper col-start-1 m-auto grid w-full grid-cols-header items-center rounded-md bg-bg-500 py-3 md:flex md:bg-transparent md:px-3"
-         x-data="{n:0}"
+    <div
+        class="content-wrapper col-start-1 m-auto grid w-full grid-cols-header items-center rounded-md bg-bg-500 py-3 md:flex md:bg-transparent md:px-3"
+        x-data="{n:0}"
     >
         <div class="transition-all md:flex"
              :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}"
@@ -82,7 +85,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             </a>
         </div>
         <div class="contents md:flex md:flex-grow md:justify-end">
-            <div class="col-start-5 transition-all md:flex md:items-center z-10"
+            <div class="transition-all flex items-center z-10"
                  :class="{ 'md:drop-shadow-lg': $store.main.isHeaderShadowVisible }"
             >
                 <?=
@@ -98,18 +101,17 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                     ->setChildTemplate('Magento_Theme::html/header/search/search-button.phtml')
                     ->render()
                 ?>
-                <?php
-                // Temporarily disabled wishlist
-                // $resizable
-                //     ->setData([
-                //         'id' => 'wishlist-desktop',
-                //         'initialWidth' => 56,
-                //         'initialHeight' => 56,
-                //         'right' => true,
-                //         'cssClass' => 'resizable--wishlist md:pointer-events-auto',
-                //     ])
-                //     ->setChildTemplate('Magento_Theme::html/header/wishlist/wishlist-button.phtml')
-                //     ->render()
+                <?=
+                $resizable
+                    ->setData([
+                        'id' => 'wishlist-desktop',
+                        'initialWidth' => 56,
+                        'initialHeight' => 56,
+                        'right' => true,
+                        'cssClass' => 'resizable--wishlist md:pointer-events-auto',
+                    ])
+                    ->setChildTemplate('Magento_Theme::html/header/wishlist/wishlist-button.phtml')
+                    ->render()
                 ?>
                 <?=
                 $resizable
@@ -132,7 +134,8 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden"
      :style="`opacity: ${$store.main.opacityOnZoom}`"
 >
-    <div class="absolute inset-x-0 -top-[72px] col-start-3 flex min-h-[56px] items-center justify-center text-primary-500">
+    <div
+        class="absolute inset-x-0 -top-[72px] col-start-3 flex min-h-[56px] items-center justify-center text-primary-500">
         <a href="<?= $escaper->escapeUrl($block->getUrl('')) ?>"
            x-element-transition-trigger
            class="heading pointer-events-auto rounded-sm px-3 py-2 text-xl text-primary-500 transition-all"
@@ -158,17 +161,16 @@ $popup
     ->render()
 ?>
 
-<?php
-// Disable wishlist temporarily
-// $popup
-//     ->setData([
-//         'id' => 'wishlist',
-//         'isFocused' => true,
-//         'isFullScreen' => true,
-//         'desktopTarget' => 'wishlist-desktop',
-//     ])
-//     ->setChildTemplate('Magento_Theme::html/header/wishlist/wishlist-overlay.phtml')
-//     ->toHtml()
+<?=
+$popup
+    ->setData([
+        'id' => 'wishlist',
+        'isFocused' => true,
+        'isFullScreen' => true,
+        'desktopTarget' => 'wishlist-desktop',
+    ])
+    ->setChildTemplate('Magento_Theme::html/header/wishlist/wishlist-overlay.phtml')
+    ->toHtml()
 ?>
 
 <?=
