--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -70,99 +70,101 @@ if ($product) {
     >
         <!-- Mobile main image -->
         <div class="mb-4 md:hidden">
-            <div
-                class="relative z-[50] flex aspect-product min-h-0 justify-center bg-[--fade-in-bg]"
-                x-data="ImageZoom"
-                @touchstart="images[0].type === 'image' && onTouchStart"
-                @touchmove="images[0].type === 'image' && onTouchMove"
-                @touchend="images[0].type === 'image' && onTouchEnd"
-                @wheel="images[0].type === 'image' && onWheel"
-                :style="`transform: translate(${translate.x}px, ${translate.y}px) scale(${scale})`"
-                :class="{
+            <div x-element-transition-dest="mobile-img">
+                <div
+                    class="relative z-[50] flex aspect-product min-h-0 justify-center bg-[--fade-in-bg]"
+                    x-data="ImageZoom"
+                    @touchstart="images[0].type === 'image' && onTouchStart"
+                    @touchmove="images[0].type === 'image' && onTouchMove"
+                    @touchend="images[0].type === 'image' && onTouchEnd"
+                    @wheel="images[0].type === 'image' && onWheel"
+                    :style="`transform: translate(${translate.x}px, ${translate.y}px) scale(${scale})`"
+                    :class="{
                     'transition-all duration-300': reset,
                     'z-50': scale > 1
                 }"
-            >
-                <div
-                    class="hide-unless-transition absolute inset-0 z-10 flex items-center justify-center bg-[--fade-in-bg] transition-opacity delay-1000 duration-300"
-                    x-data="TransitionImage({
+                >
+                    <div
+                        class="hide-unless-transition absolute inset-0 z-10 flex items-center justify-center bg-[--fade-in-bg] transition-opacity delay-1000 duration-300"
+                        x-data="TransitionImage({
                         src: images[0].img,
                         imageId: 'mobile-image'
                     })"
-                    x-show="!!src"
-                    :class="{ 'opacity-0': isImgLoaded }"
-                >
-                    <img
-                        height="100%"
-                        width="100%"
-                        class="max-h-full object-center object-cover size-full mix-blend-darken"
-                        :src="src"
-                        :alt="images[0].caption"
-                        alt=""
+                        x-show="!!src"
+                        :class="{ 'opacity-0': isImgLoaded }"
                     >
-                </div>
-                <div class="flex items-center justify-center bg-[--fade-in-bg]">
-                    <img
-                        id="mobile-image"
-                        height="100%"
-                        width="100%"
-                        class="no-fade object-center object-cover size-full mix-blend-darken"
-                        :src="images[0].img"
-                        :alt="images[0].caption"
-                        alt=""
-                    >
-                </div>
-                <?= $template->setData(['product' => $product, 'class' => 'md:hidden bottom left'])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
-
-                <template x-if="$store.main.isMobile && images[0].type === 'video'">
-                    <div class="contents">
-                        <!-- Play button -->
-                        <button
-                            type="button"
-                            class="group absolute inset-0 grid place-items-center"
-                            aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
-                            @click="activateVideo(images[0].position)"
-                            @keydown.enter="activateVideo(images[0].position)"
-                            x-cloak
+                        <img
+                            height="100%"
+                            width="100%"
+                            class="max-h-full object-center object-cover size-full mix-blend-darken"
+                            :src="src"
+                            :alt="images[0].caption"
+                            alt=""
                         >
-                            <?= $heroiconsSolid->playHtml(
-                                'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
-                                44,
-                                44,
-                                ['aria-hidden' => 'true']
-                            ); ?>
-                        </button>
-
-                        <!-- Youtube container -->
-                        <div class="absolute inset-0 hidden size-full bg-white"
-                             :class="{ 'hidden': activeVideoType !== 'youtube' }"
-                             x-transition.opacity.duration.500ms
-                             x-show="activeVideoType === 'youtube'"
-                        >
-                            <div :id="`mobile-youtube-player-${images[0].position}`"
-                                 class="size-full"></div>
-                        </div>
-
-                        <!-- Video container -->
-                        <div class="absolute inset-0 hidden size-full bg-white"
-                             :class="{ 'hidden': activeVideoType !== 'vimeo' }"
-                             x-transition.opacity.duration.500ms
-                             x-show="activeVideoType === 'vimeo'"
-                        >
-                            <div :id="`mobile-vimeo-player-${images[0].position}`"
-                                 class="size-full"></div>
-                        </div>
                     </div>
-                </template>
+                    <div class="flex items-center justify-center bg-[--fade-in-bg]">
+                        <img
+                            id="mobile-image"
+                            height="100%"
+                            width="100%"
+                            class="no-fade object-center object-cover size-full mix-blend-darken"
+                            :src="images[0].img"
+                            :alt="images[0].caption"
+                            alt=""
+                        >
+                    </div>
+                    <?= $template->setData(['product' => $product, 'class' => 'md:hidden bottom left'])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
 
-                <div class="flex items-center justify-center bg-[--fade-in-bg]" :class="'hidden'">
-                    <img
-                        height="100%"
-                        width="100%"
-                        class="no-fade object-center w-auto object-cover h-full mix-blend-darken"
-                        src="<?= $mainImageUrl ?>"
-                        alt="<?= $escaper->escapeHtmlAttr($mainImage ? $mainImage->getData('label') : $productName) ?>"
-                    >
+                    <template x-if="$store.main.isMobile && images[0].type === 'video'">
+                        <div class="contents">
+                            <!-- Play button -->
+                            <button
+                                type="button"
+                                class="group absolute inset-0 grid place-items-center"
+                                aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                                @click="activateVideo(images[0].position)"
+                                @keydown.enter="activateVideo(images[0].position)"
+                                x-cloak
+                            >
+                                <?= $heroiconsSolid->playHtml(
+                                    'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                                    44,
+                                    44,
+                                    ['aria-hidden' => 'true']
+                                ); ?>
+                            </button>
+
+                            <!-- Youtube container -->
+                            <div class="absolute inset-0 hidden size-full bg-white"
+                                 :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                                 x-transition.opacity.duration.500ms
+                                 x-show="activeVideoType === 'youtube'"
+                            >
+                                <div :id="`mobile-youtube-player-${images[0].position}`"
+                                     class="size-full"></div>
+                            </div>
+
+                            <!-- Video container -->
+                            <div class="absolute inset-0 hidden size-full bg-white"
+                                 :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                                 x-transition.opacity.duration.500ms
+                                 x-show="activeVideoType === 'vimeo'"
+                            >
+                                <div :id="`mobile-vimeo-player-${images[0].position}`"
+                                     class="size-full"></div>
+                            </div>
+                        </div>
+                    </template>
+
+                    <div class="flex items-center justify-center bg-[--fade-in-bg]" :class="'hidden'">
+                        <img
+                            height="100%"
+                            width="100%"
+                            class="no-fade object-center w-auto object-cover h-full mix-blend-darken"
+                            src="<?= $mainImageUrl ?>"
+                            alt="<?= $escaper->escapeHtmlAttr($mainImage ? $mainImage->getData('label') : $productName) ?>"
+                        >
+                    </div>
                 </div>
             </div>
         </div>
