--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/404.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/404.phtml
@@ -2,8 +2,8 @@
 
 declare(strict_types=1);
 
-use Magento\Framework\View\Element\Template;
 use Magento\Framework\Escaper;
+use Magento\Framework\View\Element\Template;
 
 /** @var Template $block */
 /** @var Escaper $escaper */
@@ -12,7 +12,7 @@ $title = $block->getChildBlock('page.main.title')? $block->getChildBlock('page.m
 $content = $block->getChildHtml('cms_page') ?? $block->getChildHtml('cms_noroute');
 ?>
 
-<div class="content-wrapper flex h-full flex-col items-center justify-center gap-5">
+<div class="content-wrapper mx-auto flex h-full flex-col items-center justify-center gap-5">
     <p class="text-[80px] leading-none">
         <?= $title ?>
     </p>
