INTERNAL-411-190 - Resolve issues of PDP popup on mobile * Resolve the spacing issues * Add a shadow to separate action buttons * Resolve the input checked issue when re-opening the popup * Re-calculate the popup height when error message gets removed

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -76,7 +76,13 @@ if (!$inStock) {
 }
 
 ?>
-<div class="relative md:rounded-b-md max-md:px-3 w-full">
+<div
+    class="
+        relative md:rounded-b-md max-md:px-3 w-full
+        <?= ($isPopup) ? 'pb-2 max-md:px-4' : '' ?>
+        <?= ($isPopup && $productType !== 'bundle') ? 'pt-4 shadow-fadeTop' : '' ?>
+    "
+>
     <?php if ($isPopup && $productType === 'bundle'): ?>
         <?= $block->getBlockHtml('bundle.summary') ?>
     <?php endif; ?>
