INTERNAL-411-191 - Resolve reported issues * Adjust breadcrumbs to use font weight 600 * Adjust product card transition duration * Adjust product card background on hover * Adjust video hero button's colors

--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/video-hero.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/video-hero.phtml
@@ -124,7 +124,7 @@ $mobileAlignment = $block->getData('mobile_content_alignment');
                         href="<?= $escaper->escapeUrl($linkHref); ?>"
                         target="<?= $escaper->escapeHtmlAttr($linkHelper->getLinkTarget($link_url)); ?>"
                     <?php endif; ?>
-                    class="button button--filled-primary font-normal"
+                    class="button button--filled-secondary font-normal"
                     x-element-transition-trigger
                 >
                     <?= $escaper->escapeHtml($block->getData('button_label')) ?>
