--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
@@ -19,7 +19,7 @@ use Satoshi\Theme\Block\Template;
         <div class="pb-2">
             <h2 class="text-lg"><?= __('Products') ?></h2>
         </div>
-        <div class="flex min-h-11 flex-col gap-2 md:min-h-0">
+        <div class="min-h-11 md:min-h-0">
             <p x-show="!products.length && searchTerm.length >=3">
                 <b class="font-semibold text-secondary-700"><?= __('Oops!') ?></b>
                 <?= __('We could not find any products matching your search.') ?>
