--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -16,7 +16,7 @@ $categoryUrlSuffix = $breadcrumbsViewModel->getCategoryUrlSuffix();
 <div
     x-show="searchTerm.length > 2"
     :class="{
-        'opacity-0': isLoading,
+        'opacity-0': isLoading && !getIsSearchActive(),
     }"
 >
     <div class="relative flex grow flex-col gap-4 p-3 pb-2 md:p-5">
