--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
@@ -12,7 +12,7 @@ use Satoshi\Theme\Block\Template;
 <div
     class="transition overflow-hidden"
     :class="{
-        'opacity-0': isLoading,
+        'opacity-0': isLoading && !getIsSearchActive(),
     }"
 >
     <div class="flex grow flex-col gap-4 p-3 pb-2 md:p-5">
@@ -24,7 +24,7 @@ use Satoshi\Theme\Block\Template;
                 <b class="font-semibold text-secondary-700"><?= __('Oops!') ?></b>
                 <?= __('We could not find any products matching your search.') ?>
             </p>
-            <p x-show="searchTerm.length < 3">
+            <p x-show="searchTerm.length < 3 && !isLoading">
                 <?= __('Minimum Search query length is 3') ?>
             </p>
             <div
