--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
@@ -1,7 +1,7 @@
 <div
     x-show="suggestions.length"
     :class="{
-        'opacity-0': isLoading,
+        'opacity-0': isLoading && !getIsSearchActive(),
     }"
 >
     <div class="relative flex grow flex-col gap-4 p-3 pb-2 md:p-5">
