--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
@@ -49,7 +49,8 @@ $productName = $block->getProduct()->getName();
                 </h2>
             <?php endif ?>
         </div>
-        <div class="w-full">
+        <div class="w-full" data-content-wrapper>
+            <!-- pagination-content -->
             <?php foreach ($items as $review): ?>
                 <div itemscope itemprop="review" itemtype="http://schema.org/Review"
                      class="border-b pb-4 my-4 border-container last:border-0 last:mb-0 mb-5 p-5 rounded-xl bg-bg-400">
@@ -127,6 +128,7 @@ $productName = $block->getProduct()->getName();
                     </div>
                 </div>
             <?php endforeach; ?>
+            <!-- end-pagination-content -->
         </div>
         <?php if ($toolbar): ?>
             <div class="toolbar review-toolbar mt-4">
